added presentation layer including controllers and views

--- a/CRM.Presentation/appsettings.json
+++ b/CRM.Presentation/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CRMRelationalContext": "Server=(localdb)\\mssqllocaldb;Database=CRMRelationalContext-64944821-97fa-4370-83c2-f256fc3dc50b;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
